objects/nv_obj_flight__c/nv_obj_flight__c.object-meta.xml
<CustomObject>
    <label>Flight</label>
    <nameField>
        <displayFormat>FLT-{000}</displayFormat>
        <label>Flight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>