objects/nv_obj_flight__c/fields/nv_fld_arrivalAirport__c.field-meta.xml
<CustomField>
    <fullName>nv_fld_arrivalAirport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Arrival airport from the flight</description>
    <label>Arrival Airport</label>
    <referenceTo>nv_obj_Airport__c</referenceTo>
    <relationshipLabel>Flights (Arrival Airport)</relationshipLabel>
    <relationshipName>ArrivalFlights</relationshipName>
    <type>Lookup</type>
</CustomField>