objects/nv_obj_flight__c/fields/nv_fld_departureAirport__c.field-meta.xml
<CustomField>
    <fullName>nv_fld_departureAirport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Departure airport from the flight</description>
    <label>Departure Airport</label>
    <referenceTo>nv_obj_Airport__c</referenceTo>
    <relationshipLabel>Flights (Departure Airport)</relationshipLabel>
    <relationshipName>DepartureFlights</relationshipName>
    <type>Lookup</type>
</CustomField>