objects/nv_obj_flight__c/fields/nv_fld_flightDistance__c.field-meta.xml
<CustomField>
    <fullName>nv_fld_flightDistance__c</fullName>
    <description>Distance of the flight in Kilometers</description>
    <label>Flight Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>